 * #962: Under the hood, merge all configured source directories, excludes, and patterns into a
   unified temporary patterns file for passing to Borg. The borgmatic configuration options remain
   unchanged.
 * #962: For the LVM hook, add support for nested logical volumes.
 * #965: Fix a borgmatic runtime directory error when running the "spot" check with a database hook
   enabled.
 * Fix the "spot" check to no longer consider pipe files within an archive for file comparisons.
 * Fix the "spot" check to have a nicer error when there are no source paths to compare.
 * Fix auto-excluding of special files (when databases are configured) to support relative source
   directory paths.
 * Drop support for Python 3.8, which has been end-of-lifed.

1.9.5
 * #418: Backup and restore databases that have the same name but with different ports, hostnames,
   or hooks.
 * #947: To avoid a hang in the database hooks, error and exit when the borgmatic runtime
   directory overlaps with the configured excludes.
 * #954: Fix a findmnt command error in the Btrfs hook by switching to parsing JSON output.
 * #956: Fix the printing of a color reset code even when color is disabled.
 * #958: Drop colorama as a library dependency.
 * When the ZFS, Btrfs, or LVM hooks aren't configured, don't try to cleanup snapshots for them.

1.9.4
 * #80 (beta): Add an LVM hook for snapshotting and backing up LVM logical volumes. See the
   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/snapshot-your-filesystems/
 * #251 (beta): Add a Btrfs hook for snapshotting and backing up Btrfs subvolumes. See the
   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/snapshot-your-filesystems/
 * #926: Fix a library error when running within a PyInstaller bundle.
 * #950: Fix a snapshot unmount error in the ZFS hook when using nested datasets.
 * Update the ZFS hook to discover and snapshot ZFS datasets even if they are parent/grandparent